<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/backgroundtwo"
    android:orientation="vertical">


    <include
        android:id="@+id/maintoolbar"
        layout="@layout/main_toolbar"
        android:visibility="visible"></include>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/myaccount"
        android:textColor="@android:color/white"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btn_crateaccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:background="@mipmap/button2"
        android:hint="@string/createaccount"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btnvip_createaccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:background="@mipmap/button2"
        android:hint="@string/createaccount_vip"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

    <TextView
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/accaddvantage"
        android:textColor="@android:color/white"
        android:textSize="12sp" />

    <TextView
        android:padding="10dp"
        android:id="@+id/vipaccont_adv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/advantage_vipaccont"
        android:textColor="@android:color/white"
        android:textSize="13sp" />

</LinearLayout>
