<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/backgroundtwo">

    <include
        android:id="@+id/maintoolbar"
        layout="@layout/main_toolbar"
        android:visibility="visible"></include>

    <TextView
        android:id="@+id/account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/maintoolbar"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/verification"
        android:textColor="@android:color/white"
        android:textSize="16sp" />



    <LinearLayout
        android:id="@+id/llhor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/account"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/btn_crateaccount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@mipmap/account_buttonreg"
            android:hint="@string/personalinfo"
            android:textColorHint="@android:color/white"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btnvip_createaccount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@mipmap/account_buttonper"
            android:hint="@string/REG"
            android:textColorHint="@android:color/white"
            android:textSize="12sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/termservices"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/llhor"
        android:layout_centerVertical="true"
        android:padding="10dp"
        android:text="TERMES OF SERVICES"
        android:textColor="@color/textcolor"
        android:textSize="14sp" />

    <ScrollView
        android:layout_above="@+id/bootambtn"
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/termservices">

        <LinearLayout
            android:id="@+id/llver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/detailtermservices"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="1.CONTRACTUAL RELATIONSHIP"
                android:textColor="@color/textcolor"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/detailterms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/TERM"
                android:textColor="@color/textcolor"
                android:textSize="12sp" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_alignParentBottom="true"
        android:id="@+id/bootambtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/btn_decline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@mipmap/button3"
            android:text="DECLINE"
            android:textColor="@color/textcolor" />

        <Button
            android:id="@+id/btn_accept"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:background="@mipmap/accept_btn"
            android:text="ACCEPT"
            android:textColor="@color/textcolor" />

    </LinearLayout>
</RelativeLayout>
