<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutTeste"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".SplitAddFrnd">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/main_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:theme="@style/GalaxyZooThemeToolbarDarkOverflow"
            app:popupTheme="@style/Theme.AppCompat.NoActionBar" />
        <!--<ImageButton
            android:id="@+id/btnback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/btnAdd"
            android:src="@drawable/back_icon" />-->

        <!--  <ImageView
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_gravity="center"
              android:gravity="center"
              android:paddingLeft="-48dp"
              android:paddingStart="-48dp"
              android:src="@mipmap/logo" />-->

        <TextView

            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_alignBottom="@+id/btnAdd"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@+id/btnAdd"
            android:gravity="center_vertical|center_horizontal"
            android:paddingLeft="-48dp"
            android:paddingStart="-48dp"
            android:text="@string/titleTecnologies"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/White" />

        <ImageButton
            android:id="@+id/btnAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="14dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/plus_icon"
            android:contentDescription="@string/btnAdd" />

    </RelativeLayout>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="375dp"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:id="@+id/linearLayoutForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"></LinearLayout>
    </ScrollView>


    <LinearLayout
        android:padding="20dp"
        android:gravity="center"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/btnDisplay"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"

            android:layout_weight="1"
            android:text="@string/btnDisplay" />

        <Button
            android:id="@+id/btncancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:text="Cancel" />

    </LinearLayout>
</LinearLayout>