<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/backgroundtwo">

    <include
        android:id="@+id/maintoolbar"
        layout="@layout/main_toolbar"
        android:visibility="visible"></include>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/maintoolbar">

        <LinearLayout
            android:id="@+id/llver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">


            <TextView
                android:id="@+id/account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/myaccount"
                android:textColor="@color/textcolor"
                android:textSize="20dp" />

            <LinearLayout
                android:id="@+id/llhor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/account"
                android:orientation="horizontal"
                android:weightSum="2">

                <Button
                    android:id="@+id/btn_crateaccount"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@mipmap/account_buttonper"

                    android:hint="@string/personalinfo"
                    android:textColorHint="@android:color/white"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/btnvip_createaccount"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@mipmap/account_buttonreg"
                    android:hint="@string/REG"
                    android:textColorHint="@android:color/white"
                    android:textSize="12sp" />

            </LinearLayout>
            <EditText
                android:id="@+id/et_regfirstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@mipmap/account_bg1"
                android:hint="FIRST NAME"
                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/textcolor"
                android:textColorHint="@color/textcolor"
                android:textSize="@dimen/edittextsize" />

            <EditText
                android:id="@+id/et_reglastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@mipmap/account_bg1"
                android:hint="LAST NAME"
                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/textcolor"
                android:textColorHint="@color/textcolor"
                android:textSize="@dimen/edittextsize" />

            <EditText
                android:id="@+id/et_regemail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@mipmap/account_bg1"
                android:hint="EMAIL ADDRESS"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/textcolor"
                android:textColorHint="@color/textcolor"
                android:textSize="@dimen/edittextsize" />

            <EditText
                android:id="@+id/et_regpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@mipmap/account_bg1"
                android:hint="PASSWORD"
                android:inputType="textPassword"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/textcolor"
                android:textColorHint="@color/textcolor"
                android:textSize="@dimen/edittextsize" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <Spinner
                    android:id="@+id/strip_countrycode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="4dp"
                    android:layout_weight="1.5"
                    android:background="@mipmap/account_bg1"
                    android:padding="10dp"
                    android:textColor="@color/textcolor"
                    android:textSize="@dimen/edittextsize" />


                <EditText
                    android:layout_weight=".5"
                    android:id="@+id/et_regcellnumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@mipmap/account_bg1"
                    android:hint="CELL NUMBER"
                    android:inputType="number"
                    android:padding="10dp"
                    android:maxLength="12"
                    android:singleLine="true"
                    android:textColor="@color/textcolor"
                    android:textColorHint="@color/textcolor"
                    android:textSize="@dimen/edittextsize" />


            </LinearLayout>


            <EditText
                android:id="@+id/et_regcreditinfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@mipmap/account_bg1"
                android:focusable="false"
                android:hint="CREDIT CARD INFO"
                android:padding="10dp"
                android:textColor="@color/textcolor"
                android:textColorHint="@color/textcolor"
                android:textSize="12sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="OPTIONAL VIP IS MANDATORY"
                android:textColor="@color/textcolor"
                android:textSize="10dp" />

            <Button
                android:id="@+id/btn_joinvip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="25dp"
                android:background="@mipmap/account_buttonper"
                android:hint="JOIN VIP PROGRAM"
                android:textColorHint="@color/textcolor"
                android:textSize="15dp" />

            <RelativeLayout
                android:id="@+id/btn_receivenews"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:background="@mipmap/account_buttonreg">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:padding="10dp"
                    android:text="RECEIVE NEWS LETTERS"
                    android:textColor="@color/textcolor"
                    android:textSize="12sp" />

                <CheckBox
                    android:id="@+id/ch_regnewlater_registation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:button="@drawable/custome_checkbox" />
            </RelativeLayout>

            <Button
                android:id="@+id/btn_next"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="30dp"
                android:background="@mipmap/btnfive"
                android:text="NEXT"
                android:textColor="@color/textcolor" />


        </LinearLayout>
    </ScrollView>
</RelativeLayout>
